--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,8 +28,10 @@ Author URI: https://cloudsdale.co.uk/
 //  6. Buttons
 //  7. Video
 //  8. Images
-//  9. Single Blog Post
-//  10. Default Page
+//  9. Appear
+//  10. Home
+//  11. Scrolling Text
+//  12. What's On
 
 $primary: #ef236b;
 $highlight: #feb002;
@@ -104,26 +106,26 @@ body {
 // ===========================================================================
 @font-face {
   font-family: "Falco Outline";
-  src: url("../Starsky/assets/fonts/Falco_Black_Outline.ttf") format("truetype");
+  src: url("../starsky/assets/fonts/Falco_Black_Outline.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Falco Negative";
-  src: url("../Starsky/assets/fonts/Falco-Black-Inline-Negative.ttf")
+  src: url("../starsky/assets/fonts/Falco-Black-Inline-Negative.ttf")
     format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Falco Black";
-  src: url("../Starsky/assets/fonts/FalcoBlack.ttf") format("truetype");
+  src: url("../starsky/assets/fonts/FalcoBlack.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Monda";
-  src: url("../Starsky/assets/fonts/Monda-Regular.ttf") format("truetype");
+  src: url("../starsky/assets/fonts/Monda-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -159,8 +161,8 @@ button {
   text-transform: lowercase;
   letter-spacing: 1px;
 }
-a:visited {
-  color: #000;
+.btn:visited {
+  color: $white;
 }
 // ===========================================================================
 //  3. Navigation
@@ -188,13 +190,9 @@ a:visited {
   top: 0;
   width: 100%;
   background: $sunrise;
-  height: 45px;
+  height: 72px;
   z-index: 999;
   transition: height 0.5s ease-in-out;
-}
-
-.cm-nav {
-  height: 72px;
 }
 
 .cm-nav-inner {
@@ -227,14 +225,13 @@ a:visited {
     display: inline-block;
   }
 }
-@media (min-width: $xs) {
-  .menu-toggle {
-    top: 15px;
-    left: 0px;
-    .menu-icon {
-      width: 40px;
-      height: 40px;
-    }
+
+.menu-toggle {
+  top: 15px;
+  left: 0px;
+  .menu-icon {
+    width: 40px;
+    height: 40px;
   }
 }
 
@@ -263,86 +260,120 @@ a:visited {
     background-image: url(assets/img/icons/twitter.svg);
   }
 }
-@media (min-width: $xs) {
-  .social-icons {
-    top: 20px;
-    right: 0px;
-    a {
-      width: 30px;
-      height: 30px;
+
+.social-icons {
+  top: 20px;
+  right: 0px;
+  a {
+    width: 30px;
+    height: 30px;
+  }
+}
+@media (max-width: 360px) {
+  .navbar-brand {
+    img {
+      left: calc(50% - 80px);
+      position: relative;
+      width: 160px;
+      top: 0px;
+      transition: 0.5s ease-in-out;
     }
   }
 }
+@media (max-width: $md) {
+  .social-icons {
+    right: 5px;
+  }
+  .menu-toggle {
+    left: 5px;
+  }
+}
+
 .navbar-nav ul {
   flex-direction: column;
 }
-.navbar-nav ul li {
+.navbar-nav li a {
   padding: 10px;
   text-transform: capitalize;
   font-size: 16px;
-  color: $primary;
   font-weight: 600;
-  a,
-  a:visited,
-  a:focus,
-  a:active {
-    color: $primary;
-  }
-  a:hover {
-    color: $highlight;
-  }
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  padding-top: 9px;
+  border-radius: 10px;
+  color: $primary;
+  background-color: $white;
+  margin: 10px 0px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+.navbar-nav li a:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+.navbar-nav li a:visited,
+.navbar-nav li a:focus,
+.navbar-nav li a:highlight {
+  color: $primary;
 }
 .offcanvas {
   width: 100%;
+  width: 100vw;
+  height: 100%;
+  height: 100vh;
+  transition-duration: 0.2s;
   background: $sunrise;
+  -webkit-transition: height 1s;
+  -moz-transition: height 1s;
+  -ms-transition: height 1s;
+  -o-transition: height 1s;
+  transition: height 1s;
 }
-.offcanvas-header {
-  img {
-    width: 200px;
-  }
-}
-.offcanvas-footer {
-  a img {
-    width: 2em;
-    height: 2em;
-    margin-right: 5px;
-  }
-  ul {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-  }
-}
-.offcanvas-footer ul,
-.offcanvas-footer li {
-  list-style-type: none;
-  color: $white;
-}
-.offcanvas-footer a,
-.offcanvas-footer a:visited {
-  color: $white;
-  width: 100%;
-  font-weight: 400;
-  font-size: 0.9em;
-  text-decoration: none;
-  img {
-    width: 2em;
-    height: 2em;
-    margin-right: 5px;
-  }
-}
-footer a:hover {
-  color: $highlight;
-}
+
 .btn-close {
   background-image: url(assets/img/icons/close.svg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  width: 20px;
-  height: 20px;
   display: inline-block;
+  position: absolute;
+  top: 17px;
+  width: 30px;
+  height: 30px;
+  left: -10px;
+  opacity: 1;
 }
+.off-canvas-inner {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+.off-canvas-container {
+  width: 100%;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  img {
+    width: 100%;
+    max-width: 600px;
+    padding-bottom: 30px;
+  }
+}
+.menu-icon,
+.social-icons a {
+  transition-duration: 0.3s;
+}
+.menu-icon:hover,
+.social-icons a:hover {
+  opacity: 0.75;
+}
+
 // ===========================================================================
 //  4. Footer
 // ===========================================================================
@@ -503,77 +534,51 @@ footer a:hover {
   opacity: 1;
   -webkit-transform: none;
   transform: none;
-  -webkit-transition-delay: 0.1s;
+  -webkit-transition-delay: 0.3s;
   transition-delay: 0.1s;
 }
 //make nav appear delayed
 
-#site-navigation .offcanvas-body .navbar-nav ul li {
+#site-navigation .off-canvas-inner .navbar-nav li {
   -webkit-transition: all 0.8s;
   transition: all 0.8s;
   opacity: 0;
   -webkit-transform: translateY(20px);
   transform: translateY(20px);
 }
-#site-navigation .show .offcanvas-body .navbar-nav ul li {
+#site-navigation .show .off-canvas-inner .navbar-nav li {
+  opacity: 1;
+  -webkit-transform: none;
+  transform: none;
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+#site-navigation .off-canvas-inner .off-canvas-container #navImg {
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
+  opacity: 0;
+  -webkit-transform: translateY(20px);
+  transform: translateY(20px);
+}
+#site-navigation .show .off-canvas-inner .off-canvas-container #navImg {
   opacity: 1;
   -webkit-transform: none;
   transform: none;
   -webkit-transition-delay: 0.1s;
   transition-delay: 0.1s;
 }
-#site-navigation .show .offcanvas-body .navbar-nav ul li:nth-child(1) {
-  -webkit-transition-delay: 0.3s;
-  transition-delay: 0.1s;
-}
-#site-navigation .show .offcanvas-body .navbar-nav ul li:nth-child(2) {
-  -webkit-transition-delay: 1s;
-  transition-delay: 0.2s;
+#site-navigation .show .off-canvas-inner .navbar-nav li {
+  $delay-increment: 0.1s;
+
+  @for $i from 1 through 20 {
+    &:nth-child(#{$i}) {
+      $delay: $delay-increment * ($i - 1);
+      transition-delay: $delay;
+      -webkit-transition-delay: $delay;
+    }
+  }
 }
 
-.appear2.inview2:nth-child(3) {
-  -webkit-transition-delay: 0.3s;
-  transition-delay: 0.3s;
-}
-
-.appear2.inview2:nth-child(4) {
-  -webkit-transition-delay: 0.4s;
-  transition-delay: 0.4s;
-}
-
-.appear2.inview2:nth-child(5) {
-  -webkit-transition-delay: 0.5s;
-  transition-delay: 0.5s;
-}
-.appear2.inview2:nth-child(6) {
-  -webkit-transition-delay: 0.6s;
-  transition-delay: 0.6s;
-}
-
-.appear2.inview2:nth-child(7) {
-  -webkit-transition-delay: 0.7s;
-  transition-delay: 0.7s;
-}
-
-.appear2.inview2:nth-child(8) {
-  -webkit-transition-delay: 0.8s;
-  transition-delay: 0.8s;
-}
-
-.appear2.inview2:nth-child(9) {
-  -webkit-transition-delay: 0.9s;
-  transition-delay: 0.9s;
-}
-
-.appear2.inview2:nth-child(10) {
-  -webkit-transition-delay: 1s;
-  transition-delay: 1s;
-}
-
-.appear2.inview2:nth-child(11) {
-  -webkit-transition-delay: 1.1s;
-  transition-delay: 1.1s;
-}
 // ===========================================================================
 //  10. Home Page
 // ===========================================================================
@@ -587,4 +592,190 @@ footer a:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+// ===========================================================================
+//  11. Scolling text
+// ===========================================================================
+
+.wrapper {
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.marquee {
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  animation: marquee 40s linear infinite;
+}
+.scroll-reverse {
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  animation: marquee2 40s linear infinite;
+}
+.marquee h1,
+.scroll-reverse h1 {
+  display: inline-block;
+  padding-top: 20px;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translate3d(0, 0, 0);
+  }
+  100% {
+    transform: translate3d(-50%, 0, 0);
+  }
+}
+
+@keyframes marquee2 {
+  0% {
+    transform: translate3d(-50%, 0, 0);
+  }
+  100% {
+    transform: translate3d(0%, 0, 0);
+  }
+}
+
+// ===========================================================================
+//  12. What's On
+// ===========================================================================
+.whats-on {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 100px;
+  flex-wrap: wrap;
+  .sml-img {
+    flex-basis: 80%;
+    margin-left: 0%;
+    border-top-right-radius: 150px;
+    border-bottom-right-radius: 150px;
+  }
+  .blog-intro {
+    flex-basis: 100%;
+    padding-right: 10%;
+    padding-left: 10%;
+  }
+}
+.whats-on:nth-child(even) {
+  .sml-img {
+    margin-left: 20%;
+    border-bottom-left-radius: 150px;
+    border-top-left-radius: 150px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+}
+@media (min-width: $md) {
+  .whats-on:nth-child(even) {
+    .sml-img {
+      order: 2;
+      margin-left: 0%;
+    }
+  }
+  .whats-on {
+    .sml-img {
+      flex-basis: 60%;
+    }
+    .blog-intro {
+      flex-basis: 40%;
+      padding-right: 5%;
+      padding-left: 5%;
+    }
+  }
+}
+@media (min-width: $xl) {
+  .whats-on {
+    .sml-img {
+      flex-basis: 80%;
+      margin-left: 0%;
+    }
+    .blog-intro {
+      flex-basis: 30%;
+      padding-right: 5%;
+      padding-left: 5%;
+    }
+  }
+}
+
+// Homepage loop
+
+.all-posts {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 150px;
+}
+.recent-post {
+  flex-basis: 100%;
+}
+.square-img {
+  height: 300px;
+  margin-left: 30%;
+  border-top-left-radius: 150px;
+  border-bottom-left-radius: 150px;
+}
+.recent-post:nth-child(even) {
+  .square-img {
+    margin-right: 30%;
+    margin-left: 0%;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 150px;
+    border-bottom-right-radius: 150px;
+  }
+}
+.post-content {
+  padding: 10% 20%;
+}
+@media (min-width: $md) {
+  .post-content {
+    padding: 0 0;
+  }
+  .square-img {
+    height: auto;
+    padding-bottom: 100%;
+    margin-left: 0%;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+  .recent-post:nth-child(even) {
+    .square-img {
+      height: auto;
+      padding-bottom: 100%;
+      margin-left: 0%;
+      margin-right: 0%;
+      border-top-left-radius: 0px;
+      border-bottom-left-radius: 0px;
+      border-top-right-radius: 0px;
+      border-bottom-right-radius: 0px;
+    }
+  }
+  .all-posts {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+  .recent-post:nth-child(1) {
+    .square-img {
+      border-top-left-radius: 150px;
+    }
+  }
+  .recent-post:nth-child(3) {
+    .square-img {
+      border-top-right-radius: 150px;
+    }
+  }
+  .recent-post {
+    flex-basis: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+.section-heading {
+  padding-top: 75px;
+  padding-bottom: 25px;
 }
