--- a/style.css
+++ b/style.css
@@ -910,25 +910,25 @@ body {
 
 @font-face {
   font-family: "Falco Outline";
-  src: url("../Starsky/assets/fonts/Falco_Black_Outline.ttf") format("truetype");
+  src: url("../starsky/assets/fonts/Falco_Black_Outline.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Falco Negative";
-  src: url("../Starsky/assets/fonts/Falco-Black-Inline-Negative.ttf") format("truetype");
+  src: url("../starsky/assets/fonts/Falco-Black-Inline-Negative.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Falco Black";
-  src: url("../Starsky/assets/fonts/FalcoBlack.ttf") format("truetype");
+  src: url("../starsky/assets/fonts/FalcoBlack.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "Monda";
-  src: url("../Starsky/assets/fonts/Monda-Regular.ttf") format("truetype");
+  src: url("../starsky/assets/fonts/Monda-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -967,8 +967,8 @@ button {
   letter-spacing: 1px;
 }
 
-a:visited {
-  color: #000;
+.btn:visited {
+  color: #efeeeb;
 }
 
 .menu-toggle {
@@ -995,14 +995,10 @@ a:visited {
   width: 100%;
   background: -webkit-gradient(linear, left top, left bottom, from(#feb002), to(#ef236b));
   background: linear-gradient(to bottom, #feb002, #ef236b);
-  height: 45px;
+  height: 72px;
   z-index: 999;
   -webkit-transition: height 0.5s ease-in-out;
   transition: height 0.5s ease-in-out;
-}
-
-.cm-nav {
-  height: 72px;
 }
 
 .cm-nav-inner {
@@ -1035,16 +1031,15 @@ a:visited {
   display: inline-block;
 }
 
-@media (min-width: 575px) {
-  .menu-toggle {
-    top: 15px;
-    left: 0px;
-  }
-  .menu-toggle .menu-icon {
-    width: 40px;
-    height: 40px;
-  }
+.menu-toggle {
+  top: 15px;
+  left: 0px;
 }
+.menu-toggle .menu-icon {
+  width: 40px;
+  height: 40px;
+}
+
 .social-icons {
   position: absolute;
   top: 10px;
@@ -1071,14 +1066,31 @@ a:visited {
   background-image: url(assets/img/icons/twitter.svg);
 }
 
-@media (min-width: 575px) {
-  .social-icons {
-    top: 20px;
-    right: 0px;
+.social-icons {
+  top: 20px;
+  right: 0px;
+}
+.social-icons a {
+  width: 30px;
+  height: 30px;
+}
+
+@media (max-width: 360px) {
+  .navbar-brand img {
+    left: calc(50% - 80px);
+    position: relative;
+    width: 160px;
+    top: 0px;
+    -webkit-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
   }
-  .social-icons a {
-    width: 30px;
-    height: 30px;
+}
+@media (max-width: 768px) {
+  .social-icons {
+    right: 5px;
+  }
+  .menu-toggle {
+    left: 5px;
   }
 }
 .navbar-nav ul {
@@ -1088,72 +1100,47 @@ a:visited {
           flex-direction: column;
 }
 
-.navbar-nav ul li {
+.navbar-nav li a {
   padding: 10px;
   text-transform: capitalize;
   font-size: 16px;
-  color: #ef236b;
   font-weight: 600;
-}
-.navbar-nav ul li a,
-.navbar-nav ul li a:visited,
-.navbar-nav ul li a:focus,
-.navbar-nav ul li a:active {
+  text-align: center;
+  text-transform: uppercase;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-size: 200% auto;
+  padding-top: 9px;
+  border-radius: 10px;
   color: #ef236b;
+  background-color: #efeeeb;
+  margin: 10px 0px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
 }
-.navbar-nav ul li a:hover {
-  color: #feb002;
+
+.navbar-nav li a:hover {
+  -webkit-box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.navbar-nav li a:visited,
+.navbar-nav li a:focus,
+.navbar-nav li a:highlight {
+  color: #ef236b;
 }
 
 .offcanvas {
   width: 100%;
+  width: 100vw;
+  height: 100%;
+  height: 100vh;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
   background: -webkit-gradient(linear, left top, left bottom, from(#feb002), to(#ef236b));
   background: linear-gradient(to bottom, #feb002, #ef236b);
-}
-
-.offcanvas-header img {
-  width: 200px;
-}
-
-.offcanvas-footer a img {
-  width: 2em;
-  height: 2em;
-  margin-right: 5px;
-}
-.offcanvas-footer ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 1rem;
-}
-
-.offcanvas-footer ul,
-.offcanvas-footer li {
-  list-style-type: none;
-  color: #efeeeb;
-}
-
-.offcanvas-footer a,
-.offcanvas-footer a:visited {
-  color: #efeeeb;
-  width: 100%;
-  font-weight: 400;
-  font-size: 0.9em;
-  text-decoration: none;
-}
-.offcanvas-footer a img,
-.offcanvas-footer a:visited img {
-  width: 2em;
-  height: 2em;
-  margin-right: 5px;
-}
-
-footer a:hover {
-  color: #feb002;
+  -webkit-transition: height 1s;
+  transition: height 1s;
 }
 
 .btn-close {
@@ -1161,9 +1148,59 @@ footer a:hover {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  width: 20px;
-  height: 20px;
   display: inline-block;
+  position: absolute;
+  top: 17px;
+  width: 30px;
+  height: 30px;
+  left: -10px;
+  opacity: 1;
+}
+
+.off-canvas-inner {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.off-canvas-container {
+  width: 100%;
+  max-width: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+.off-canvas-container img {
+  width: 100%;
+  max-width: 600px;
+  padding-bottom: 30px;
+}
+
+.menu-icon,
+.social-icons a {
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+}
+
+.menu-icon:hover,
+.social-icons a:hover {
+  opacity: 0.75;
 }
 
 #footer {
@@ -1312,11 +1349,11 @@ footer a:hover {
   opacity: 1;
   -webkit-transform: none;
   transform: none;
-  -webkit-transition-delay: 0.1s;
+  -webkit-transition-delay: 0.3s;
   transition-delay: 0.1s;
 }
 
-#site-navigation .offcanvas-body .navbar-nav ul li {
+#site-navigation .off-canvas-inner .navbar-nav li {
   -webkit-transition: all 0.8s;
   transition: all 0.8s;
   opacity: 0;
@@ -1324,7 +1361,23 @@ footer a:hover {
   transform: translateY(20px);
 }
 
-#site-navigation .show .offcanvas-body .navbar-nav ul li {
+#site-navigation .show .off-canvas-inner .navbar-nav li {
+  opacity: 1;
+  -webkit-transform: none;
+  transform: none;
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+
+#site-navigation .off-canvas-inner .off-canvas-container #navImg {
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
+  opacity: 0;
+  -webkit-transform: translateY(20px);
+  transform: translateY(20px);
+}
+
+#site-navigation .show .off-canvas-inner .off-canvas-container #navImg {
   opacity: 1;
   -webkit-transform: none;
   transform: none;
@@ -1332,59 +1385,85 @@ footer a:hover {
   transition-delay: 0.1s;
 }
 
-#site-navigation .show .offcanvas-body .navbar-nav ul li:nth-child(1) {
-  -webkit-transition-delay: 0.3s;
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(1) {
+  transition-delay: 0s;
+  -webkit-transition-delay: 0s;
+}
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(2) {
   transition-delay: 0.1s;
+  -webkit-transition-delay: 0.1s;
 }
-
-#site-navigation .show .offcanvas-body .navbar-nav ul li:nth-child(2) {
-  -webkit-transition-delay: 1s;
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(3) {
   transition-delay: 0.2s;
+  -webkit-transition-delay: 0.2s;
 }
-
-.appear2.inview2:nth-child(3) {
-  -webkit-transition-delay: 0.3s;
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(4) {
   transition-delay: 0.3s;
+  -webkit-transition-delay: 0.3s;
 }
-
-.appear2.inview2:nth-child(4) {
-  -webkit-transition-delay: 0.4s;
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(5) {
   transition-delay: 0.4s;
+  -webkit-transition-delay: 0.4s;
 }
-
-.appear2.inview2:nth-child(5) {
-  -webkit-transition-delay: 0.5s;
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(6) {
   transition-delay: 0.5s;
+  -webkit-transition-delay: 0.5s;
 }
-
-.appear2.inview2:nth-child(6) {
-  -webkit-transition-delay: 0.6s;
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(7) {
   transition-delay: 0.6s;
+  -webkit-transition-delay: 0.6s;
 }
-
-.appear2.inview2:nth-child(7) {
-  -webkit-transition-delay: 0.7s;
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(8) {
   transition-delay: 0.7s;
+  -webkit-transition-delay: 0.7s;
 }
-
-.appear2.inview2:nth-child(8) {
-  -webkit-transition-delay: 0.8s;
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(9) {
   transition-delay: 0.8s;
+  -webkit-transition-delay: 0.8s;
 }
-
-.appear2.inview2:nth-child(9) {
-  -webkit-transition-delay: 0.9s;
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(10) {
   transition-delay: 0.9s;
+  -webkit-transition-delay: 0.9s;
 }
-
-.appear2.inview2:nth-child(10) {
-  -webkit-transition-delay: 1s;
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(11) {
   transition-delay: 1s;
+  -webkit-transition-delay: 1s;
 }
-
-.appear2.inview2:nth-child(11) {
-  -webkit-transition-delay: 1.1s;
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(12) {
   transition-delay: 1.1s;
+  -webkit-transition-delay: 1.1s;
+}
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(13) {
+  transition-delay: 1.2s;
+  -webkit-transition-delay: 1.2s;
+}
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(14) {
+  transition-delay: 1.3s;
+  -webkit-transition-delay: 1.3s;
+}
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(15) {
+  transition-delay: 1.4s;
+  -webkit-transition-delay: 1.4s;
+}
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(16) {
+  transition-delay: 1.5s;
+  -webkit-transition-delay: 1.5s;
+}
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(17) {
+  transition-delay: 1.6s;
+  -webkit-transition-delay: 1.6s;
+}
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(18) {
+  transition-delay: 1.7s;
+  -webkit-transition-delay: 1.7s;
+}
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(19) {
+  transition-delay: 1.8s;
+  -webkit-transition-delay: 1.8s;
+}
+#site-navigation .show .off-canvas-inner .navbar-nav li:nth-child(20) {
+  transition-delay: 1.9s;
+  -webkit-transition-delay: 1.9s;
 }
 
 .home-intro {
@@ -1411,4 +1490,230 @@ footer a:hover {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.wrapper {
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.marquee {
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  -webkit-animation: marquee 40s linear infinite;
+          animation: marquee 40s linear infinite;
+}
+
+.scroll-reverse {
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  -webkit-animation: marquee2 40s linear infinite;
+          animation: marquee2 40s linear infinite;
+}
+
+.marquee h1,
+.scroll-reverse h1 {
+  display: inline-block;
+  padding-top: 20px;
+}
+
+@-webkit-keyframes marquee {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(-50%, 0, 0);
+            transform: translate3d(-50%, 0, 0);
+  }
+}
+
+@keyframes marquee {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(-50%, 0, 0);
+            transform: translate3d(-50%, 0, 0);
+  }
+}
+@-webkit-keyframes marquee2 {
+  0% {
+    -webkit-transform: translate3d(-50%, 0, 0);
+            transform: translate3d(-50%, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(0%, 0, 0);
+            transform: translate3d(0%, 0, 0);
+  }
+}
+@keyframes marquee2 {
+  0% {
+    -webkit-transform: translate3d(-50%, 0, 0);
+            transform: translate3d(-50%, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(0%, 0, 0);
+            transform: translate3d(0%, 0, 0);
+  }
+}
+.whats-on {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-bottom: 100px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.whats-on .sml-img {
+  -ms-flex-preferred-size: 80%;
+      flex-basis: 80%;
+  margin-left: 0%;
+  border-top-right-radius: 150px;
+  border-bottom-right-radius: 150px;
+}
+.whats-on .blog-intro {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  padding-right: 10%;
+  padding-left: 10%;
+}
+
+.whats-on:nth-child(even) .sml-img {
+  margin-left: 20%;
+  border-bottom-left-radius: 150px;
+  border-top-left-radius: 150px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+@media (min-width: 768px) {
+  .whats-on:nth-child(even) .sml-img {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    margin-left: 0%;
+  }
+  .whats-on .sml-img {
+    -ms-flex-preferred-size: 60%;
+        flex-basis: 60%;
+  }
+  .whats-on .blog-intro {
+    -ms-flex-preferred-size: 40%;
+        flex-basis: 40%;
+    padding-right: 5%;
+    padding-left: 5%;
+  }
+}
+@media (min-width: 1200px) {
+  .whats-on .sml-img {
+    -ms-flex-preferred-size: 80%;
+        flex-basis: 80%;
+    margin-left: 0%;
+  }
+  .whats-on .blog-intro {
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
+    padding-right: 5%;
+    padding-left: 5%;
+  }
+}
+.all-posts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 150px;
+}
+
+.recent-post {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
+.square-img {
+  height: 300px;
+  margin-left: 30%;
+  border-top-left-radius: 150px;
+  border-bottom-left-radius: 150px;
+}
+
+.recent-post:nth-child(even) .square-img {
+  margin-right: 30%;
+  margin-left: 0%;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-right-radius: 150px;
+  border-bottom-right-radius: 150px;
+}
+
+.post-content {
+  padding: 10% 20%;
+}
+
+@media (min-width: 768px) {
+  .post-content {
+    padding: 0 0;
+  }
+  .square-img {
+    height: auto;
+    padding-bottom: 100%;
+    margin-left: 0%;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+  .recent-post:nth-child(even) .square-img {
+    height: auto;
+    padding-bottom: 100%;
+    margin-left: 0%;
+    margin-right: 0%;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+  }
+  .all-posts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .recent-post:nth-child(1) .square-img {
+    border-top-left-radius: 150px;
+  }
+  .recent-post:nth-child(3) .square-img {
+    border-top-right-radius: 150px;
+  }
+  .recent-post {
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+.section-heading {
+  padding-top: 75px;
+  padding-bottom: 25px;
 }/*# sourceMappingURL=style.css.map */
